test/testdata/variables/unused_local_error_defined.lox
{
    var a = "unused"; // error: a has been declared but is never used
    var b = "used";
    print b;
}
